# hdsk-techx

./: .gitignore  README.md  hdsk.cabal  package.yaml  stack.yaml
app/: Main.hs
docs/: Data-String-Strip.html  Hdsk-Cluster.html  Hdsk-DecisionTree.html  Hdsk-Decomposition.html  Hdsk-Ensemble.html  Hdsk-Linear.html  Hdsk-ModelSelection.html  Hdsk-NaiveBayes.html  Hdsk-NearestNeighbors.html  Hdsk-NeuralNetwork.html  Hdsk-Preprocessing.html  Hdsk-Training.html  Hdsk.html  doc-index.html  doc-index.json  hdsk.haddock  hdsk.txt  index.html
docs/src/: Data.String.Strip.html  Hdsk.Cluster.html  Hdsk.DecisionTree.html  Hdsk.Decomposition.html  Hdsk.Ensemble.html  Hdsk.Internal.Types.html  Hdsk.Linear.html  Hdsk.ModelSelection.html  Hdsk.NaiveBayes.html  Hdsk.NearestNeighbors.html  Hdsk.NeuralNetwork.html  Hdsk.Preprocessing.html  Hdsk.Training.html  Hdsk.html
src/Hdsk/: Cluster.hs  DecisionTree.hs  Decomposition.hs  Ensemble.hs  Frames.hs  Linear.hs  ModelSelection.hs  NaiveBayes.hs  NearestNeighbors.hs  NeuralNetwork.hs  Preprocessing.hs  Training.hs
src/Hdsk/Internal/: Types.hs
