name:                hdsk
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/hdsk#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.String.Strip
                     , Hdsk.Cluster
                     , Hdsk.DecisionTree
                     , Hdsk.Decomposition
                     , Hdsk.Preprocessing
                     , Hdsk.Ensemble
                     , Hdsk.Linear
                     , Hdsk.ModelSelection
                     , Hdsk.NaiveBayes
                     , Hdsk.NearestNeighbors
                     , Hdsk.NeuralNetwork
  other-modules:       Hdsk.Internal.Types
  build-depends:       base >= 4.7 && < 5
                     -- , hpython
                     -- , gdp
                     -- , Frames
                     -- , cluss
                     -- , singleton-nats
                     -- , template-haskell
  default-language:    Haskell2010

executable hdsk
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hdsk
                     , vector
                     , text
  default-language:    Haskell2010

test-suite hdsk-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hdsk
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/hdsk
